AC_INIT([spunnel],[0.5],[aaron_kitzmiller@harvard.edu])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_SRCDIR(src/spunnel.c)
LT_INIT
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
  src/Makefile
  ])
AC_OUTPUT

